--- a/trunk/ui/upgradeDialog.ui
+++ b/trunk/ui/upgradeDialog.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
-    <height>226</height>
+    <width>596</width>
+    <height>294</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -83,6 +83,16 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="showPackages" >
+       <property name="text" >
+        <string>Show packages..</string>
+       </property>
+       <property name="checkable" >
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="addToQueue" >
        <property name="text" >
         <string>Add to Queue</string>
@@ -151,10 +161,36 @@ p, li { white-space: pre-wrap; }
      </layout>
     </widget>
    </item>
+   <item row="3" column="1" >
+    <widget class="QTreeWidget" name="treeWidget" >
+     <column>
+      <property name="text" >
+       <string>1</string>
+      </property>
+     </column>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources>
   <include location="qtpacman.qrc" />
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>showPackages</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>treeWidget</receiver>
+   <slot>setShown(bool)</slot>
+   <hints>
+    <hint type="sourcelabel" >
+     <x>206</x>
+     <y>139</y>
+    </hint>
+    <hint type="destinationlabel" >
+     <x>307</x>
+     <y>224</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
