Ok, kind of a commit. Here goes:  * Implemented error Handling (at last!)  * Fixed some bugs  * Fixed compiler warnings  * Added more strings (due to the errors)  * More stuff that I simply don't remember now ^^
Enjoy!

--- a/trunk/shaman/ui/upgradeDialog.ui
+++ b/trunk/shaman/ui/upgradeDialog.ui
@@ -85,7 +85,7 @@
      <item>
       <widget class="QPushButton" name="showPackages" >
        <property name="text" >
-        <string>Show packages..</string>
+        <string>Show packages...</string>
        </property>
        <property name="checkable" >
         <bool>true</bool>
