--- a/trunk/shaman/ui/MainWindow.ui
+++ b/trunk/shaman/ui/MainWindow.ui
@@ -12,6 +12,9 @@
   <property name="windowTitle" >
    <string>Shaman</string>
   </property>
+  <property name="windowIcon" >
+   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-32.png</iconset>
+  </property>
   <property name="toolButtonStyle" >
    <enum>Qt::ToolButtonTextUnderIcon</enum>
   </property>
@@ -474,7 +477,7 @@
      <x>0</x>
      <y>0</y>
      <width>1195</width>
-     <height>24</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile" >
