--- a/trunk/shaman/ui/qtpacman.qrc
+++ b/trunk/shaman/ui/qtpacman.qrc
@@ -15,6 +15,34 @@
         <file>icons/list-remove.png</file>
         <file>icons/network-server-database.png</file>
         <file>icons/preferences-system.png</file>
+        <file>icons/shaman/shaman-128.png</file>
+        <file>icons/shaman/shaman-16.png</file>
+        <file>icons/shaman/shaman-22.png</file>
+        <file>icons/shaman/shaman-256.png</file>
+        <file>icons/shaman/shaman-32.png</file>
+        <file>icons/shaman/shaman-48.png</file>
+        <file>icons/shaman/shaman-512.png</file>
+        <file>icons/shaman/shaman-64.png</file>
+        <file>icons/shaman/shaman-animation.mng</file>
+        <file>icons/shaman/shaman-system-is-up-to-date-128.png</file>
+        <file>icons/shaman/shaman-system-is-up-to-date-16.png</file>
+        <file>icons/shaman/shaman-system-is-up-to-date-22.png</file>
+        <file>icons/shaman/shaman-system-is-up-to-date-32.png</file>
+        <file>icons/shaman/shaman-system-is-up-to-date-48.png</file>
+        <file>icons/shaman/shaman-system-is-up-to-date-64.png</file>
+        <file>icons/shaman/shaman-updates-available-128.png</file>
+        <file>icons/shaman/shaman-updates-available-16.png</file>
+        <file>icons/shaman/shaman-updates-available-22.png</file>
+        <file>icons/shaman/shaman-updates-available-32.png</file>
+        <file>icons/shaman/shaman-updates-available-48.png</file>
+        <file>icons/shaman/shaman-updates-available-64.png</file>
+        <file>icons/shaman/shaman-yellow-icon-128.png</file>
+        <file>icons/shaman/shaman-yellow-icon-16.png</file>
+        <file>icons/shaman/shaman-yellow-icon-22.png</file>
+        <file>icons/shaman/shaman-yellow-icon-32.png</file>
+        <file>icons/shaman/shaman-yellow-icon-48.png</file>
+        <file>icons/shaman/shaman-yellow-icon-64.png</file>
+        <file>icons/shaman/shaman.svg</file>
         <file>icons/user-invisible.png</file>
         <file>icons/user-offline.png</file>
         <file>icons/user-online.png</file>
