--- a/trunk/shaman/ui/editPBDialog.ui
+++ b/trunk/shaman/ui/editPBDialog.ui
@@ -12,6 +12,9 @@
   <property name="windowTitle" >
    <string>Editing PKGBUILD</string>
   </property>
+  <property name="windowIcon" >
+   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-yellow-icon-32.png</iconset>
+  </property>
   <layout class="QGridLayout" >
    <item row="1" column="0" >
     <layout class="QVBoxLayout" >
