More icons and stuff ;)

--- a/trunk/shaman/ui/qtpacman.qrc
+++ b/trunk/shaman/ui/qtpacman.qrc
@@ -15,6 +15,7 @@
         <file>icons/list-remove.png</file>
         <file>icons/network-server-database.png</file>
         <file>icons/preferences-system.png</file>
+        <file>icons/shaman/animation_source/anim06.png</file>
         <file>icons/shaman/shaman-128.png</file>
         <file>icons/shaman/shaman-16.png</file>
         <file>icons/shaman/shaman-22.png</file>
