--- a/trunk/shaman/ui/buildingDialog.ui
+++ b/trunk/shaman/ui/buildingDialog.ui
@@ -13,7 +13,7 @@
    <string>Shaman - Building Packages</string>
   </property>
   <property name="windowIcon" >
-   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-animation.mng</iconset>
+   <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
   </property>
   <layout class="QGridLayout" >
    <item row="0" column="0" >
