--- a/trunk/shaman/ui/qtpacman.qrc
+++ b/trunk/shaman/ui/qtpacman.qrc
@@ -6,6 +6,7 @@
         <file>icons/dialog-cancel.png</file>
         <file>icons/dialog-ok-apply.png</file>
         <file>icons/document-open-folder.png</file>
+        <file>icons/document-open-remote.png</file>
         <file>icons/document-open.png</file>
         <file>icons/draw-text.png</file>
         <file>icons/edit-delete.png</file>
