--- a/trunk/shaman/ui/aboutDialog.ui
+++ b/trunk/shaman/ui/aboutDialog.ui
@@ -84,6 +84,9 @@ p, li { white-space: pre-wrap; }
       <attribute name="title" >
        <string>About</string>
       </attribute>
+      <attribute name="icon" >
+       <iconset resource="qtpacman.qrc" >:/Icons/icons/help-about.png</iconset>
+      </attribute>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
         <widget class="QLabel" name="aboutInfoLabel" >
@@ -97,6 +100,9 @@ p, li { white-space: pre-wrap; }
      <widget class="QWidget" name="tab_2" >
       <attribute name="title" >
        <string>Authors</string>
+      </attribute>
+      <attribute name="icon" >
+       <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/shaman-updates-available-32.png</iconset>
       </attribute>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
@@ -119,6 +125,9 @@ p, li { white-space: pre-wrap; }
      <widget class="QWidget" name="Seite" >
       <attribute name="title" >
        <string>Thanks To</string>
+      </attribute>
+      <attribute name="icon" >
+       <iconset resource="qtpacman.qrc" >:/Icons/icons/shaman/animation_source/anim06.png</iconset>
       </attribute>
       <layout class="QGridLayout" >
        <item row="0" column="0" >
