--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -78,7 +78,7 @@
       </sizepolicy>
      </property>
      <property name="currentIndex" >
-      <number>0</number>
+      <number>2</number>
      </property>
      <widget class="QWidget" name="Seite" >
       <layout class="QGridLayout" >
@@ -426,155 +426,205 @@ p, li { white-space: pre-wrap; }
        <item row="1" column="0" >
         <widget class="QTabWidget" name="repoTab" >
          <property name="currentIndex" >
-          <number>2</number>
+          <number>0</number>
          </property>
          <widget class="QWidget" name="officialTab" >
           <attribute name="title" >
            <string>Arch Linux Official Repositories</string>
           </attribute>
-          <layout class="QGridLayout" >
-           <item row="1" column="0" >
-            <layout class="QVBoxLayout" >
-             <item>
-              <widget class="QLabel" name="officialLabel" >
-               <property name="text" >
-                <string>Here you can choose what repositories to use between Arch Linux's official ones.
-Please note that packages from Unstable and Testing may break your system.</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="coreBox" >
-               <property name="text" >
-                <string comment="Do not translate" >Core</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="extraBox" >
-               <property name="text" >
-                <string comment="Do not translate" >Extra</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="communityBox" >
-               <property name="text" >
-                <string comment="Do not translate" >Community</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="testingBox" >
-               <property name="text" >
-                <string comment="Do not translate" >Testing</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="unstableBox" >
-               <property name="text" >
-                <string comment="Do not translate" >Unstable</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <spacer>
-               <property name="orientation" >
-                <enum>Qt::Vertical</enum>
-               </property>
-               <property name="sizeHint" >
-                <size>
-                 <width>20</width>
-                 <height>40</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-            </layout>
-           </item>
-           <item row="2" column="0" >
-            <widget class="QGroupBox" name="groupBox_4" >
-             <property name="title" >
-              <string>Server</string>
-             </property>
-             <layout class="QGridLayout" >
-              <item row="0" column="0" >
-               <widget class="QLabel" name="mirrorLabel" >
-                <property name="text" >
-                 <string>Mirror:</string>
-                </property>
-               </widget>
-              </item>
-              <item row="0" column="1" >
-               <widget class="QComboBox" name="mirrorBox" />
-              </item>
-              <item row="2" column="1" >
+          <attribute name="icon" >
+           <iconset resource="qtpacman.qrc" >:/Icons/icons/archlinux-icon-crystal-32.svg</iconset>
+          </attribute>
+          <widget class="QWidget" name="" >
+           <property name="geometry" >
+            <rect>
+             <x>4</x>
+             <y>25</y>
+             <width>661</width>
+             <height>451</height>
+            </rect>
+           </property>
+           <layout class="QVBoxLayout" >
+            <item>
+             <layout class="QVBoxLayout" >
+              <item>
                <layout class="QHBoxLayout" >
                 <item>
-                 <widget class="QLineEdit" name="addMirrorLine" />
+                 <widget class="QLabel" name="label_18" >
+                  <property name="text" >
+                   <string/>
+                  </property>
+                  <property name="pixmap" >
+                   <pixmap resource="qtpacman.qrc" >:/Icons/icons/archlinux-icon-crystal-32.svg</pixmap>
+                  </property>
+                 </widget>
                 </item>
                 <item>
-                 <widget class="QPushButton" name="addMirrorButton" >
+                 <widget class="QLabel" name="officialLabel" >
                   <property name="text" >
-                   <string>Add Mirror</string>
+                   <string>Here you can choose what repositories to use between Arch Linux's official ones.
+Please note that packages from Unstable and Testing may break your system.</string>
                   </property>
                  </widget>
                 </item>
                </layout>
               </item>
+              <item>
+               <widget class="QCheckBox" name="coreBox" >
+                <property name="text" >
+                 <string comment="Do not translate" >Core</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="extraBox" >
+                <property name="text" >
+                 <string comment="Do not translate" >Extra</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="communityBox" >
+                <property name="text" >
+                 <string comment="Do not translate" >Community</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="testingBox" >
+                <property name="text" >
+                 <string comment="Do not translate" >Testing</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QCheckBox" name="unstableBox" >
+                <property name="text" >
+                 <string comment="Do not translate" >Unstable</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <spacer>
+                <property name="orientation" >
+                 <enum>Qt::Vertical</enum>
+                </property>
+                <property name="sizeHint" >
+                 <size>
+                  <width>20</width>
+                  <height>40</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
              </layout>
-            </widget>
-           </item>
-          </layout>
+            </item>
+            <item>
+             <widget class="QGroupBox" name="groupBox_4" >
+              <property name="title" >
+               <string>Server</string>
+              </property>
+              <layout class="QGridLayout" >
+               <item row="0" column="0" >
+                <widget class="QLabel" name="mirrorLabel" >
+                 <property name="text" >
+                  <string>Mirror:</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="1" >
+                <widget class="QComboBox" name="mirrorBox" />
+               </item>
+               <item row="2" column="1" >
+                <layout class="QHBoxLayout" >
+                 <item>
+                  <widget class="QLineEdit" name="addMirrorLine" />
+                 </item>
+                 <item>
+                  <widget class="QPushButton" name="addMirrorButton" >
+                   <property name="text" >
+                    <string>Add Mirror</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+              </layout>
+             </widget>
+            </item>
+           </layout>
+          </widget>
          </widget>
          <widget class="QWidget" name="KDEModTab" >
           <attribute name="title" >
            <string>KDEMod Repositories</string>
           </attribute>
-          <layout class="QGridLayout" >
-           <item row="0" column="0" >
-            <layout class="QVBoxLayout" >
-             <item>
-              <widget class="QLabel" name="KDEModLabel" >
-               <property name="text" >
-                <string>KDEMod is an improved version of KDE, an Arch Linux exclusive. Featuring an 
+          <attribute name="icon" >
+           <iconset resource="qtpacman.qrc" >:/Icons/icons/archlinux-mods-kdemod.svg</iconset>
+          </attribute>
+          <widget class="QWidget" name="" >
+           <property name="geometry" >
+            <rect>
+             <x>5</x>
+             <y>5</y>
+             <width>665</width>
+             <height>477</height>
+            </rect>
+           </property>
+           <layout class="QVBoxLayout" >
+            <item>
+             <layout class="QHBoxLayout" >
+              <item>
+               <widget class="QLabel" name="label_15" >
+                <property name="text" >
+                 <string/>
+                </property>
+                <property name="pixmap" >
+                 <pixmap resource="qtpacman.qrc" >:/Icons/icons/archlinux-mods-kdemod.svg</pixmap>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="KDEModLabel" >
+                <property name="text" >
+                 <string>KDEMod is an improved version of KDE, an Arch Linux exclusive. Featuring an 
 improved Qt build, compatible with Arch Linux standard Qt's, an improved theme,
 and lots of addons, KDEMod is the best way to taste the ease and the power
 of KDE with the simplicity and the power of Arch.</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="KDEMod3Box" >
-               <property name="text" >
-                <string>KDEMod 3 Repository</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <widget class="QCheckBox" name="KDEMod4Box" >
-               <property name="text" >
-                <string>KDEMod 4 Repository (Unstable, testers only)</string>
-               </property>
-              </widget>
-             </item>
-             <item>
-              <spacer>
-               <property name="orientation" >
-                <enum>Qt::Vertical</enum>
-               </property>
-               <property name="sizeHint" >
-                <size>
-                 <width>20</width>
-                 <height>40</height>
-                </size>
-               </property>
-              </spacer>
-             </item>
-            </layout>
-           </item>
-          </layout>
+                </property>
+               </widget>
+              </item>
+             </layout>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="KDEMod3Box" >
+              <property name="text" >
+               <string>KDEMod 3 Repository</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="KDEMod4Box" >
+              <property name="text" >
+               <string>KDEMod 4 Repository (Unstable, testers only)</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer>
+              <property name="orientation" >
+               <enum>Qt::Vertical</enum>
+              </property>
+              <property name="sizeHint" >
+               <size>
+                <width>663</width>
+                <height>351</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </widget>
          </widget>
          <widget class="QWidget" name="thirdPartyTab" >
           <attribute name="title" >
