--- a/trunk/shaman/ui/qtpacman.qrc
+++ b/trunk/shaman/ui/qtpacman.qrc
@@ -47,6 +47,7 @@
         <file>icons/shaman/shaman-yellow-icon-48.png</file>
         <file>icons/shaman/shaman-yellow-icon-64.png</file>
         <file>icons/shaman/shaman.svg</file>
+        <file>icons/system-software-update.png</file>
         <file>icons/user-invisible.png</file>
         <file>icons/user-offline.png</file>
         <file>icons/user-online.png</file>
