--- a/trunk/shaman/ui/upgradeDialog.ui
+++ b/trunk/shaman/ui/upgradeDialog.ui
@@ -157,7 +157,7 @@ p, li { white-space: pre-wrap; }
          <string/>
         </property>
         <property name="pixmap" >
-         <pixmap resource="qtpacman.qrc" >:/Icons/icons/edit-redo.png</pixmap>
+         <pixmap resource="qtpacman.qrc" >:/Icons/icons/system-software-update.png</pixmap>
         </property>
         <property name="scaledContents" >
          <bool>true</bool>
