Fixes, and added the possibility of keeping the queue dialog open after queue processing, useful if you want to review some output

--- a/trunk/shaman/ui/reviewQueueDialog.ui
+++ b/trunk/shaman/ui/reviewQueueDialog.ui
@@ -40,6 +40,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QCheckBox" name="keepOpenBox" >
+       <property name="text" >
+        <string>Keep Queue Dialog Open after the Queue is finished</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QHBoxLayout" >
        <item>
         <widget class="QPushButton" name="showPackages" >
