Ok, news reader is coming in

--- a/trunk/shaman/ui/MainWindow.ui
+++ b/trunk/shaman/ui/MainWindow.ui
@@ -540,6 +540,8 @@
    <addaction name="separator" />
    <addaction name="actionCancel_all_actions" />
    <addaction name="separator" />
+   <addaction name="actionReadNews" />
+   <addaction name="separator" />
    <addaction name="actionPacman_Preferences" />
   </widget>
   <widget class="QStatusBar" name="statusBar" />
@@ -632,6 +634,14 @@
    </property>
    <property name="text" >
     <string>Cancel all actions</string>
+   </property>
+  </action>
+  <action name="actionReadNews" >
+   <property name="icon" >
+    <iconset resource="qtpacman.qrc" >:/Icons/icons/document-open-remote.png</iconset>
+   </property>
+   <property name="text" >
+    <string>Read News</string>
    </property>
   </action>
  </widget>
